--- a/vistas/findfriends.html
+++ b/vistas/findfriends.html
@@ -23,7 +23,7 @@
     <!-- Navbar -->
     <ul class="navbar-nav ml-auto ml-md-0">
         <li class="nav-item dropdown no-arrow">
-            <a href="#" role="button"> Logout <i class="fas fa-user-circle fa-fw"></i> </a>
+            <a href="#!/login" role="button" data-ng-click="rs_logout()"  > Logout <i class="fas fa-user-circle fa-fw"></i> </a>
         </li>
     </ul>
 
