--- a/vistas/profile.html
+++ b/vistas/profile.html
@@ -15,7 +15,7 @@
         <!-- Navbar -->
         <ul class="navbar-nav ml-auto ml-md-0">
             <li class="nav-item dropdown no-arrow">
-                <a href="#" role="button"> Logout <i class="fas fa-user-circle fa-fw"></i> </a>
+                <a href="#" role="button" data-ng-click="rs_logout()" > Logout <i class="fas fa-user-circle fa-fw"></i> </a>
             </li>
         </ul>
     
@@ -116,28 +116,31 @@
                                 <div class="form-group">
                                     <h4>Modificar Datos</h4>
                                     <label>Nombre: </label>
-                                    <input type="text" required class="form-control" placeholder="Nombre"
-                                        data-ng-model="usr.name" name="nombre">
+                                    <input type="text" required class="form-control" placeholder="Nombre" name="usr.name"
+                                        data-ng-model="usr.name" >
                                 </div>
                                 <div class="form-group">
                                     <label>Apellido: </label>
-                                    <input type="text" required class="form-control" placeholder="Apellido"
-                                        data-ng-model="usr.lastName" name="apellido">
+                                    <input type="text" required class="form-control" placeholder="Apellido" name="usr.lastName"
+                                        data-ng-model="usr.lastName" >
                                 </div>
                                 <div class="form-group">
                                     <label>Mail: </label>
-                                    <input type="email" required class="form-control" placeholder="Mail"
-                                        data-ng-model="usr.mail" name="mail">
+                                    <input type="email" required class="form-control" placeholder="Mail" name="usr.mail"
+                                        data-ng-model="usr.mail">
                                 </div>
                                 <div class="form-group">
                                     <label>Contraseña: </label>
-                                    <input type="password" required class="form-control" placeholder="Contraseña"
-                                        data-ng-model="usr.password" name="password">
+                                    <input type="password" required class="form-control" placeholder="Contraseña" name="usr.password"
+                                        data-ng-model="usr.password" >
                                 </div>
+                                <div class="form-group">
+                                        <label>Repetir Contraseña: </label>
+                                        <input type="password" required class="form-control" name="usr.passwordConf"  placeholder="Repetir contraseña"
+                                            data-ng-model="usr.passwordConf" >
+                                    </div>
                                 <button type="button" class="btn btn-success"
-                                    data-ng-click="guardarUsuarioEditado()">Guardar</button>
-                                <button type="button" class="btn btn-default"
-                                    data-ng-click="cancelarUsuarioEditado()">Cancelar</button>
+                                    data-ng-click="guardarUsuarioEditado()" ng-disabled="!(usr.passwordConf == usr.password )">Guardar</button>
                             </form>
                         </div>
                     </div>
