--- a/vistas/404.html
+++ b/vistas/404.html
@@ -1,7 +1,7 @@
 <nav class="navbar navbar-expand navbar-dark bg-dark static-top">
 
 
-    <a class="navbar-brand mr-1" href="#!/wall">Picktime</a>
+    <a class="navbar-brand mr-1" href="#!/dashboard">Picktime</a>
 
     <button class="btn btn-link btn-sm text-white order-1 order-sm-0" id="sidebarToggle" href="#">
         <i class="fas fa-bars"></i>
@@ -25,7 +25,7 @@
     <!-- Sidebar -->
     <ul class="sidebar navbar-nav">
         <li class="nav-item">
-            <a class="nav-link" href="index.html">
+            <a class="nav-link" href="#!/dashboard">
                 <i class="fas fa-fw fa-tachometer-alt"></i>
                 <span>Dashboard</span>
             </a>
@@ -72,7 +72,7 @@
             <!-- Breadcrumbs-->
             <ol class="breadcrumb">
                 <li class="breadcrumb-item">
-                    <a href="index.html">Dashboard</a>
+                    <a href="#!/dashboard">Dashboard</a>
                 </li>
                 <li class="breadcrumb-item active">404 Error</li>
             </ol>
