--- a/vistas/profile.html
+++ b/vistas/profile.html
@@ -25,7 +25,7 @@
         <!-- Sidebar -->
         <ul class="sidebar navbar-nav">
             <li class="nav-item">
-                <a class="nav-link" href="index.html">
+                <a class="nav-link" href="#!/dashboard">
                     <i class="fas fa-fw fa-tachometer-alt"></i>
                     <span>Dashboard</span>
                 </a>
@@ -66,7 +66,7 @@
         </nav>
 
         <!-- Sidebar -->
-        <div id="content-wrapper" ng-app="picktimeApp" ng-controller="usersCtrl">
+        <div id="content-wrapper">
             <div class="card mb-3">
                 <div class="card-header">
                     <i class="fas fa-user-circle fa-fw"></i> Tu Perfil
