--- a/vistas/userWall.html
+++ b/vistas/userWall.html
@@ -1,7 +1,7 @@
 <nav class="navbar navbar-expand navbar-dark bg-dark static-top">
 
 
-    <a class="navbar-brand mr-1" href="#!/wall">Picktime</a>
+    <a class="navbar-brand mr-1" href="#!/dashboard">Picktime</a>
 
     <button class="btn btn-link btn-sm text-white order-1 order-sm-0" id="sidebarToggle" href="#">
         <i class="fas fa-bars"></i>
@@ -25,7 +25,7 @@
     <!-- Sidebar -->
     <ul class="sidebar navbar-nav">
         <li class="nav-item">
-            <a class="nav-link" href="index.html">
+            <a class="nav-link" href="#!/dashboard">
                 <i class="fas fa-fw fa-tachometer-alt"></i>
                 <span>Dashboard</span>
             </a>
@@ -65,14 +65,18 @@
 
     </nav>
 
-    <div class="container">
+    <div class="content-wrapper">
+        <br>
+            <div class="card-header">
+                    <i class="far fa-image"></i> Muro</div>
+                <div class="card-body" >
        
             <!-- Repeat de los posts con sus comentarios -->
             <div ng-repeat="foto in fotoConComentarios">
 
                 <!-- Post Content Column -->
 
-                <div class="col-lg-8" style="border-style: groove">
+                <div class="col-lg-8" style="border-style: groove;  margin: auto; display: block;">
 
                     <!-- -- Author-- Date/Time-->
                     <div>
