--- a/vistas/users.html
+++ b/vistas/users.html
@@ -1,7 +1,7 @@
 <nav class="navbar navbar-expand navbar-dark bg-dark static-top">
 
 
-        <a class="navbar-brand mr-1" href="#!/wall">Picktime</a>
+        <a class="navbar-brand mr-1" href="#!/dashboard">Picktime</a>
     
         <button class="btn btn-link btn-sm text-white order-1 order-sm-0" id="sidebarToggle" href="#">
             <i class="fas fa-bars"></i>
@@ -33,7 +33,7 @@
         <!-- Sidebar -->
         <ul class="sidebar navbar-nav">
             <li class="nav-item">
-                <a class="nav-link" href="index.html">
+                <a class="nav-link" href="#!/dashboard">
                     <i class="fas fa-fw fa-tachometer-alt"></i>
                     <span>Dashboard</span>
                 </a>
@@ -72,7 +72,7 @@
         </ul>
     
         </nav>
-        <div id="content-wrapper"  data-ng-app="picktimeApp" data-ng-controller="usersCtrl">
+        <div id="content-wrapper">
             <div class="card mb-3">
                 <div class="card-header">
                     <i class="fas fa-user"></i> Tabla de Usuarios</div>
