--- a/vistas/wall.html
+++ b/vistas/wall.html
@@ -1,7 +1,7 @@
 <nav class="navbar navbar-expand navbar-dark bg-dark static-top">
 
 
-        <a class="navbar-brand mr-1" href="#!/wall">Picktime</a>
+        <a class="navbar-brand mr-1" href="#!/dashboard">Picktime</a>
     
         <button class="btn btn-link btn-sm text-white order-1 order-sm-0" id="sidebarToggle" href="#">
             <i class="fas fa-bars"></i>
@@ -25,7 +25,7 @@
         <!-- Sidebar -->
         <ul class="sidebar navbar-nav">
             <li class="nav-item">
-                <a class="nav-link" href="index.html">
+                <a class="nav-link" href="#!/dashboard">
                     <i class="fas fa-fw fa-tachometer-alt"></i>
                     <span>Dashboard</span>
                 </a>
@@ -65,10 +65,13 @@
     
         </nav>
 
-        <div class="container">
+        <div class="content-wrapper">
             <br>
+            <div class="card-header">
+                    <i class="far fa-image"></i> Tu Muro</div>
+                <div class="card-body" >
             <div class="row">
-                <div class="col-lg-8">
+                <div class="col-lg-8" style="margin: auto; display: block;">
                     <h8><i>Agregar una foto: </i></h8>
                     <div class="card-body">
                         <form>
@@ -87,7 +90,7 @@
 
                     <!-- Post Content Column -->
 
-                    <div class="col-lg-8" style="border-style: groove">
+                    <div class="col-lg-8" style="border-style: groove; margin: auto; display: block;">
 
                         <!-- -- Author-- Date/Time-->
                         <div>
