--- a/vistas/profile.html
+++ b/vistas/profile.html
@@ -1,7 +1,7 @@
 <nav class="navbar navbar-expand navbar-dark bg-dark static-top">
 
 
-        <a class="navbar-brand mr-1" href="#!/wall">Picktime</a>
+        <a class="navbar-brand mr-1" href="#!/dashboard">Picktime</a>
     
         <button class="btn btn-link btn-sm text-white order-1 order-sm-0" id="sidebarToggle" href="#">
             <i class="fas fa-bars"></i>
@@ -36,22 +36,10 @@
                     <span>Tu muro</span>
                 </a>
             </li>
-            <li class="nav-item ">
-                <a class="nav-link" href="news.html">
-                    <i class="fas fa-newspaper"></i>
-                    <span>Posts Recientes</span>
-                </a>
-            </li>
             <li class="nav-item">
                 <a class="nav-link" href="#!/findfriends">
                     <i class="fas fa-users"></i>
                     <span>Encontrar Usuarios</span>
-                </a>
-            </li>
-            <li class="nav-item ">
-                <a class="nav-link" href="#!/users">
-                    <i class="fas fa-user"></i>
-                    <span>Usuarios</span>
                 </a>
             </li>
             <li class="nav-item ">
