--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<title>Ejemplo de autenticación de usuarios</title>
+	<title>Picktime</title>
 	<!-- Bootstrap core CSS
 	<link href="bootstrap/css/bootstrap.min.css" rel="stylesheet"> -->
 	<!-- Custom styles for this template -->
@@ -20,6 +20,7 @@
 	<script src="./satellizer/satellizer.min.js"></script>
 	<!-- UI-Router -->
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/angular-ui-router/1.0.22/angular-ui-router.js"></script>
+
 	<!-- Page level plugin CSS-->
 	<link href="./bootstrap/vendor/datatables/dataTables.bootstrap4.css" rel="stylesheet">
 
@@ -30,11 +31,11 @@
 <body data-ng-app="miApp">
 	
 	
-
+<div id="routedContent"> 
 	<!-- vista -->
 	<ui-view></ui-view>
 	<!-- /vista -->
-
+</div>
 	<!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
 	<script src="bootstrap/js/ie10-viewport-bug-workaround.js"></script>
 	<!-- Bootstrap core JavaScript-->
