--- a/vistas/404.html
+++ b/vistas/404.html
@@ -15,7 +15,7 @@
     <!-- Navbar -->
     <ul class="navbar-nav ml-auto ml-md-0">
         <li class="nav-item dropdown no-arrow">
-            <a href="#" role="button" data-ng-click="rs_logout()"   > Logout <i class="fas fa-user-circle fa-fw"></i> </a>
+            <a href="#!/login" role="button" data-ng-click="rs_logout()"  style="color: white" > Logout <i class="fas fa-user-circle fa-fw"></i> </a>
         </li>
     </ul>
 
@@ -65,9 +65,6 @@
 
             <!-- Breadcrumbs-->
             <ol class="breadcrumb">
-                <li class="breadcrumb-item">
-                    <a href="#!/dashboard">Dashboard</a>
-                </li>
                 <li class="breadcrumb-item active">404 Error</li>
             </ol>
 
@@ -80,15 +77,6 @@
 
         </div>
         <!-- /.container-fluid -->
-
-        <!-- Sticky Footer -->
-        <footer class="sticky-footer">
-            <div class="container my-auto">
-                <div class="copyright text-center my-auto">
-                    <span>Copyright © Your Website 2018</span>
-                </div>
-            </div>
-        </footer>
 
     </div>
     <!-- /.content-wrapper -->
