--- a/vistas/dashboard.html
+++ b/vistas/dashboard.html
@@ -15,7 +15,7 @@
         <!-- Navbar -->
         <ul class="navbar-nav ml-auto ml-md-0">
             <li class="nav-item dropdown no-arrow">
-                <a href="#" role="button" data-ng-click="rs_logout()" > Logout <i class="fas fa-user-circle fa-fw"></i> </a>
+                <a href="#!/login" role="button" data-ng-click="rs_logout()" style="color: white" > Logout <i class="fas fa-user-circle fa-fw"></i> </a>
             </li>
         </ul>
     
@@ -82,7 +82,7 @@
                 <div class="row">
                     <div class="col-md-4" data-ng-repeat="foto in fotos">
                         <div class="card mb-4 shadow-sm">
-                            <img class="img-fluid rounded" src="{{foto.photo}}" alt="">
+                            <img class="img-fluid rounded" style="width: 350px; height: 350px; object-fit: contain" src="{{foto.photo}}" alt="">
                             <div class="card-body">
                                 <div class="row">
                                     <div class="col-lg-6">
