--- a/vistas/profile.html
+++ b/vistas/profile.html
@@ -15,7 +15,7 @@
         <!-- Navbar -->
         <ul class="navbar-nav ml-auto ml-md-0">
             <li class="nav-item dropdown no-arrow">
-                <a href="#" role="button" data-ng-click="rs_logout()" > Logout <i class="fas fa-user-circle fa-fw"></i> </a>
+                <a href="#!/login" role="button" data-ng-click="rs_logout()"  style="color: white"  > Logout <i class="fas fa-user-circle fa-fw"></i> </a>
             </li>
         </ul>
     
