--- a/vistas/wall.html
+++ b/vistas/wall.html
@@ -15,7 +15,7 @@
         <!-- Navbar -->
         <ul class="navbar-nav ml-auto ml-md-0">
             <li class="nav-item dropdown no-arrow">
-                <a href="#" role="button" data-ng-click="rs_logout()" > Logout <i class="fas fa-user-circle fa-fw"></i> </a>
+                <a href="#!/login" role="button" data-ng-click="rs_logout()" style="color: white"  > Logout <i class="fas fa-user-circle fa-fw"></i> </a>
             </li>
         </ul>
     
@@ -145,7 +145,7 @@
                         </div>
 
                         <!-- Single Comment -->
-                        <div class="media mb-4" ng-repeat="comentario in foto.comentarios | orderBy: '-date'">
+                        <div class="media mb-4" ng-repeat="comentario in foto.comentarios | orderBy: '-date': true">
                             <img class="d-flex mr-3 rounded-circle" height="42" width="42" src="{{comentario.photo}}"
                                 alt="">
                             <div class="media-body">
