prueba upload host

--- a/vistas/profile.html
+++ b/vistas/profile.html
@@ -55,8 +55,8 @@
 
         <!-- Sidebar -->
         <div id="content-wrapper">
-            <div class="card mb-3">
-                <div class="card-header">
+            <div class="card mb-12">
+                <div class="card-header mb-lg-12">
                     <i class="fas fa-user-circle fa-fw"></i> Tu Perfil
                 </div>
                 <div class="card-body">
