--- a/vistas/dashboard.html
+++ b/vistas/dashboard.html
@@ -80,7 +80,7 @@
             <br>
             <div class="container">
                 <div class="row">
-                    <div class="col-md-4" data-ng-repeat="foto in fotos">
+                    <div class="col-md-4" data-ng-repeat="foto in fotos | orderBy: '-id'">
                         <div class="card mb-4 shadow-sm">
                             <img class="img-fluid rounded" style="width: 350px; height: 350px; object-fit: contain" src="{{foto.photo}}" alt="">
                             <div class="card-body">
